hphp/test/zend/good/Zend/tests/bug30519.php.expectf

Fatal error: Undefined interface: a in %s/bug30519.php on line 2
